--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="menu-item"><a href="#">CONTACT</a></li>
             <li class="menu-item"><a href="#">SHOP</a></li>
             <li class="menu-item"><a href="#">NEWS</a></li>
-            <li class="menu-item"><a href="#">SUBSCRIBE</a></li>
+            <li class="menu-item"><a href="https://www.youtube.com/channel/UCaC_3D-6bqh1QHo4HykPzYQ">SUBSCRIBE</a></li>
             
         </ul>
     </div>
